# QA-RAG

./: .gitignore  README.md  pyproject.toml  temp.txt
indexing/: custom_loader.py  main.py
indexing/legacy/: main_1.py  main_2.py
indexing/notebooks/: milbus_db_modify.ipynb  milvus_ingestion_experiment.ipynb  pyhwp_experiment.ipynb  sample_data.ipynb
indexing/notebooks/hwp_files/: 붙임1. 충북 AI 도입 지원사업 재공고문(4차).hwp  붙임2_[KTL]상시공고참가신청서.hwp
rag_langgraph/: main.py
rag_langgraph/mermaid/: graph_visualizer.py
rag_langgraph/notebooks/: graph_state_experiments.ipynb  openai_api_experiments.ipynb  rerank_experiments.ipynb  structured_output_experiments.ipynb
rag_langgraph/src/: state.py
rag_langgraph/src/graph/: rag.py
rag_langgraph/src/graph/legacy/: rag_v2.py
rag_langgraph/src/nodes/: generator.py  hallucination_checker.py  query_rewriter.py  reranker.py  retriever.py
rag_langgraph/src/nodes/legacy/: reranker.py
